# finance_monitor

./: README.md  decorators.py  pyproject.toml  requirements.txt
alert/: discord.py
api/fred/: __init__.py
api/us_treasury/: __init__.py  urls.py
db/: model.py
jobs/: fed_funds_eff_rate.py  fed_funds_target_rate.py  federal_interest_rates.py  funcs.py  schedule_federal_debt.py
jobs/archive/: fed_funds_eff_rate.py
jobs/fed_funds_rate/: __init__.py  fed_funds_etl.py  report.py
